CRUD for Companies and Industries in Mímir service
